--- a/templates/custom-finish.html
+++ b/templates/custom-finish.html
@@ -14,8 +14,8 @@
     <div class="overlay">
       <div class="icons">
         <a href="{{ url_for('wishlist') }}"><i class="icon">❤️</i></a>
-        <a href=""><i class="icon">👤</i></a>
-        <a href=""><i class="icon">🛒</i></a>
+        <a href="{{ url_for('custom') }}"><i class="icon">👤</i></a>
+        <a href="{{ url_for('checkout') }}"><i class="icon">🛒</i></a>
         <a href="{{ url_for('home') }}"><i class="icon">🏠</i></a>
       </div>
 
