--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -19,73 +19,49 @@
       />
       <header>
         <div>&larr; <span style="opacity: 0.5">Shopping Bag</span></div>
-        <div class="icons">
-          <a href="{{ url_for('wishlist') }}"><i class="icon">❤️</i></a>
-          <a href=""><i class="icon">👤</i></a>
-          <a href=""><i class="icon">🛒</i></a>
-          <a href="{{ url_for('home') }}"><i class="icon">🏠</i></a>
-        </div>
+      <div class="icons">
+        <a href="{{ url_for('wishlist') }}"><i class="icon">❤️</i></a>
+        <a href="{{ url_for('custom') }}"><i class="icon">👤</i></a>
+        <a href="{{ url_for('checkout') }}"><i class="icon">🛒</i></a>
+        <a href="{{ url_for('home') }}"><i class="icon">🏠</i></a>
+      </div>
       </header>
 
       <div class="title">
         Ready to Press, Just Checkout! <span class="sparkles">✨✨</span>
       </div>
-
       <div class="cart-section">
-        <div class="cart-item">
-          <img src="nail1.jpg" alt="Set 1" />
-          <div class="cart-details">
-            <h4>Funky, floral, fierce—just like you ♥</h4>
-            <p>Groove & Gloss</p>
-            <p>
-              $29 &nbsp;&nbsp;
-              <select>
-                <option>Qty: 1</option>
-              </select>
-            </p>
-            <p>✔ Delivery in 7 days</p>
-          </div>
-          <div class="remove">×</div>
-        </div>
+        {% for product in products %}
 
         <div class="cart-item">
-          <img src="nail2.jpg" alt="Set 2" />
+          <img src="{{ product['image'] }}" alt="Set 1" />
           <div class="cart-details">
-            <h4>Sweet, subtle, and oh-so-stylish ♥</h4>
-            <p>Honey Haze</p>
+            <h4>
+              {{ product['shape'] }} {{ product['design'] }} {{
+              product['colour'] }} ♥
+            </h4>
+            <p></p>
             <p>
-              $29 &nbsp;&nbsp;
+              {{ product['price'] }}
               <select>
                 <option>Qty: 1</option>
               </select>
             </p>
             <p>✔ Delivery in 7 days</p>
           </div>
-          <div class="remove">×</div>
-        </div>
-
-        <div class="cart-item">
-          <img src="nail3.jpg" alt="Set 3" />
-          <div class="cart-details">
-            <h4>For bold days and espresso vibes ♥</h4>
-            <p>Cocoa Crush</p>
-            <p>
-              $39 &nbsp;&nbsp;
-              <select>
-                <option>Qty: 1</option>
-              </select>
-            </p>
-            <p>✔ Delivery in 7 days</p>
+          <div class="remove">
+            <a href="{{ url_for('remove_from_cart', pid=product['_id']) }}"
+              >×</a
+            >
           </div>
-          <div class="remove">×</div>
         </div>
+        {% endfor %}
       </div>
-
-      <!-- <div class="coupon-section">
-        <h3>Coupons</h3>
-        <div class="best-coupon">% Best Coupons For You</div>
-        <div style="height: 100px; background: #fff; margin-top: 10px"></div>
-      </div> -->
+          <div class="coupon-section">
+        <h3>Buy Now</h3>
+        <div style="width: 18%;"><a class="buy-now" href="{{ url_for('register') }}"><div class="best-coupon">Buy Now</div></a></div>
+      </div>
     </div>
+
   </body>
 </html>
