--- a/templates/custom.html
+++ b/templates/custom.html
@@ -22,10 +22,12 @@
       <h1>Nail It Your Way!</h1>
 
       <div class="menu">
+        <a href="{{ url_for('custom_shape') }}">
         <div class="menu-item">
           <img src="../static/images/Custom/Home/name.png" alt="Name Set" />
           <p>Name Your Set</p>
         </div>
+        </a>
         <div class="menu-item">
           <img
             src="../static/images/Custom/Home/saved.png"
